[gd_scene load_steps=20 format=3 uid="uid://1vrt7ohxy782"]

[ext_resource type="PackedScene" uid="uid://qbmx03iibuuu" path="res://addons/godot-xr-tools/staging/scene_base.tscn" id="1_btg6a"]
[ext_resource type="Script" path="res://Scenes/Games/baquest_ball.gd" id="2_5jd57"]
[ext_resource type="PackedScene" uid="uid://b6bk2pj8vbj28" path="res://addons/godot-xr-tools/functions/movement_turn.tscn" id="2_700bp"]
[ext_resource type="PackedScene" uid="uid://b4kad2kuba1yn" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/left_hand_low.tscn" id="3_v4e35"]
[ext_resource type="PackedScene" uid="uid://b4ysuy43poobf" path="res://addons/godot-xr-tools/functions/function_pickup.tscn" id="4_vpaa4"]
[ext_resource type="PackedScene" uid="uid://l2n30mpbkdyw" path="res://addons/godot-xr-tools/hands/scenes/lowpoly/right_hand_low.tscn" id="5_02r6j"]
[ext_resource type="PackedScene" uid="uid://diyu06cw06syv" path="res://addons/godot-xr-tools/player/player_body.tscn" id="6_fm6p2"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/nodes/cyclops_blocks.gd" id="8_t4u6x"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/nodes/cyclops_block.gd" id="9_1vus1"]
[ext_resource type="Material" uid="uid://dy1gycg8iyi21" path="res://Materials/PavingStone/PavingStone.tres" id="10_dvra6"]
[ext_resource type="Script" path="res://addons/cyclops_level_builder/resources/convex_block_data.gd" id="10_nnxuf"]
[ext_resource type="PackedScene" uid="uid://7i4pqdbhssmn" path="res://Scenes/Elements/basquet.tscn" id="13_hyj4v"]
[ext_resource type="Texture2D" uid="uid://ddtrfycead87q" path="res://icon.svg" id="14_5qc5m"]
[ext_resource type="AudioStream" uid="uid://bsaw5lycmt3m4" path="res://Assets/success.ogg" id="15_cbgna"]
[ext_resource type="PackedScene" uid="uid://dgi446l4h8iax" path="res://Scenes/pickable_cube.tscn" id="15_cdcg5"]

[sub_resource type="Resource" id="Resource_7q75j"]
script = ExtResource("10_nnxuf")
selected = false
active = false
collsion = true
physics_layer = 0
physics_mask = 0
vertex_points = PackedVector3Array(0, 1, 4, 0, 1, -4, 9, 1, -4, 9, 1, 4, 9, 0, -4, 9, 0, 4, 0, 0, 4, 0, 0, -4)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 5, 5, 3, 2, 4, 5, 6, 6, 0, 4, 7, 7, 6, 7, 1)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 4, 0, 5, 0, 1, 0, 2, 1, 3, 1, 2, 1, 5, 2, 3, 2, 4, 3, 5, 3, 4, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 5, 3, 2, 0, 3, 5, 6, 4, 7, 6, 5, 0, 6, 7, 1, 4, 2, 1, 7)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_visible = PackedByteArray(1, 1, 1, 1, 1, 1)
face_color = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
face_selected = PackedByteArray(1, 0, 0, 0, 0, 0)
active_face = 0
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="Resource" id="Resource_75u2r"]
script = ExtResource("10_nnxuf")
selected = false
active = false
collsion = true
physics_layer = 0
physics_mask = 0
vertex_points = PackedVector3Array(2, 1, 0, 0, 1, 0, 0, 0, 0, 2, 0, 0, 2, 0, 1, 0, 0, 1, 0, 1, 1, 2, 1, 1)
vertex_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0)
active_vertex = -1
edge_vertex_indices = PackedInt32Array(0, 1, 1, 2, 2, 3, 3, 0, 4, 3, 2, 5, 5, 4, 6, 5, 1, 6, 4, 7, 7, 0, 6, 7)
edge_selected = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
active_edge = -1
edge_face_indices = PackedInt32Array(0, 5, 0, 2, 0, 1, 0, 3, 1, 3, 1, 2, 1, 4, 2, 4, 2, 5, 3, 4, 3, 5, 4, 5)
face_vertex_count = PackedInt32Array(4, 4, 4, 4, 4, 4)
face_vertex_indices = PackedInt32Array(0, 1, 2, 3, 4, 3, 2, 5, 6, 5, 2, 1, 0, 3, 4, 7, 6, 7, 4, 5, 6, 1, 0, 7)
face_material_indices = PackedInt32Array(0, 0, 0, 0, 0, 0)
face_uv_transform = Array[Transform2D]([Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0), Transform2D(1, 0, 0, 1, 0, 0)])
face_visible = PackedByteArray(1, 1, 1, 1, 1, 1)
face_color = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1)
face_selected = PackedByteArray(0, 0, 0, 0, 0, 1)
active_face = -1
face_ids = PackedInt32Array(0, 1, 2, 3, 4, 5)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cnxf1"]
albedo_texture = ExtResource("14_5qc5m")

[sub_resource type="QuadMesh" id="QuadMesh_o4fpj"]
material = SubResource("StandardMaterial3D_cnxf1")
size = Vector2(2, 2)

[node name="BaquestBall" instance=ExtResource("1_btg6a")]
script = ExtResource("2_5jd57")
next_game = "res://Scenes/Games/search.tscn"

[node name="XROrigin3D" parent="." index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.515638, 0, 0)

[node name="LeftHand" parent="XROrigin3D/LeftHand" index="0" instance=ExtResource("3_v4e35")]

[node name="FunctionPickup" parent="XROrigin3D/LeftHand" index="1" instance=ExtResource("4_vpaa4")]

[node name="MovementTurn" parent="XROrigin3D/RightHand" index="0" instance=ExtResource("2_700bp")]
enabled = false

[node name="RightHand" parent="XROrigin3D/RightHand" index="1" instance=ExtResource("5_02r6j")]

[node name="FunctionPickup" parent="XROrigin3D/RightHand" index="2" instance=ExtResource("4_vpaa4")]

[node name="PlayerBody" parent="XROrigin3D" index="3" instance=ExtResource("6_fm6p2")]

[node name="CyclopsBlocks" type="Node3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0)
script = ExtResource("8_t4u6x")

[node name="Block_1" type="Node3D" parent="CyclopsBlocks" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, -2)
script = ExtResource("9_1vus1")
block_data = SubResource("Resource_7q75j")
materials = Array[Material]([ExtResource("10_dvra6")])
metadata/_edit_lock_ = true

[node name="Block_0" type="Node3D" parent="CyclopsBlocks" index="1"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 2, 1, -1)
script = ExtResource("9_1vus1")
block_data = SubResource("Resource_75u2r")
materials = Array[Material]([ExtResource("10_dvra6")])

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="." index="2"]
transform = Transform3D(1, 0, 0, 0, 0.670453, 0.741952, 0, -0.741952, 0.670453, 0, 0, 0)

[node name="Basquet" parent="." index="3" instance=ExtResource("13_hyj4v")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.593675, 0, -1.93442)

[node name="CompleteMessage" type="MeshInstance3D" parent="." index="4"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.58313, -1.32355)
visible = false
mesh = SubResource("QuadMesh_o4fpj")

[node name="PickableObject" parent="." index="5" instance=ExtResource("15_cdcg5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25034, 1.08271, 0)
collision_layer = 68

[node name="PickableObject2" parent="." index="6" instance=ExtResource("15_cdcg5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25034, 1.08271, -0.199461)
collision_layer = 68

[node name="PickableObject3" parent="." index="7" instance=ExtResource("15_cdcg5")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.25034, 1.08271, -0.470299)
collision_layer = 68

[node name="SuccessAudioStream" type="AudioStreamPlayer" parent="." index="8"]
stream = ExtResource("15_cbgna")
bus = &"Music Effect"

[connection signal="game_completed" from="Basquet" to="." method="_on_game_completed"]
